Feat: Add logger, logic and pages for 404 and 500 errors

--- a/src/main/resources/text_ru.properties
+++ b/src/main/resources/text_ru.properties
@@ -1,5 +1,5 @@
-title_add_book=Библиотека: Добавить книгу
-title_edit_book=Библиотека: Изменить книгу
+title_add_book=Добавить книгу • Библиотека
+title_edit_book=Изменить книгу • Библиотека
 library=Библиотека
 orders=Заказы
 eng=Eng
@@ -11,14 +11,14 @@ field_title=Название
 field_author=Автор
 field_count=Количество
 confirm=Подтвердить
-title_catalog=Библиотека: Каталог
+title_catalog=Каталог • Библиотека
 catalog=Каталог
 to_order=Заказать
 oops=Ууупс:)
 oops_message=Кажется экземпляров этой книги не осталось
 ok=Окей
 delete_book=Удалить книгу
-title_orders=Библиотека: Заказы
+title_orders=Заказы • Библиотека
 processing=В обработке
 active=Активные
 cancel_order=Отменить заказ
@@ -29,13 +29,13 @@ reading_room=Читальный зал
 subscription=Абонемент
 return_book=Вернуть книгу
 has_on_hand=имеет на руках
-title_sign_in=Библиотека: Войти
+title_sign_in=Войти • Библиотека
 sign_in=Войти
 field_login=Логин
 field_password=Пароль
 not_registered=Не зарегистрированы? Зарегистрируйтесь
 sign_up=Зарегистрироваться
-title_sign_up=Библиотека: Регистрация
+title_sign_up=Регистрация • Библиотека
 field_first_name=Имя
 field_last_name=Фамилия
 login_is_busy=Логин занят
@@ -54,5 +54,11 @@ error_add_book=Ошибка при добавлении книги
 error_count=Количество должно быть числом не меньше 0
 error_edit_book_data=Книга не была изменена из-за некорректно введенных данных
 error_edit_book=Ошибка при изменении книги
-title_sign_in_or_sign_up=Библиотека: Войти или Зарегистрироваться
+title_sign_in_or_sign_up=Войти или Зарегистрироваться • Библиотека
 or=или
+title_404=Ошибка 404 • Библиотека
+error_404=Ошибка 404
+error_404_message=Извините, запрашиваемый ресурс не найден
+title_500=Ошибка 500 • Библиотека
+error_500=Ошибка 500
+error_500_message=Извините, произошла внутренняя ошибка сервера
